--- a/MiniProject1.html
+++ b/MiniProject1.html
@@ -2539,9 +2539,9 @@ the same as “age” or “Age”. Note that variable names below are
 capitalised.</p>
 <p>Let’s check whether the <code>AGE</code> variable is numeric and
 whether <code>RACE</code> is character. As these functions</p>
-<pre class="r"><code>is.numeric(&quot;AGE&quot;)</code></pre>
-<pre><code>## [1] FALSE</code></pre>
-<pre class="r"><code>is.character(&quot;RACE&quot;)</code></pre>
+<pre class="r"><code>is.numeric(adsl$AGE)</code></pre>
+<pre><code>## [1] TRUE</code></pre>
+<pre class="r"><code>is.character(adsl$RACE)</code></pre>
 <pre><code>## [1] TRUE</code></pre>
 <ol start="6" style="list-style-type: decimal">
 <li>There are <em>many</em> R packages that will help us do tasks with
